[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dewrangle"
version = "1.0.0"
authors = [
  { name="Alex Sickler", email="sicklera@chop.edu" },
]
description = "Python API for connecting to Dewrangle"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "aiohttp",
  "aiosignal",
  "async-timeout",
  "attrs",
  "backoff",
  "certifi",
  "charset-normalizer",
  "frozenlist",
  "gql",
  "graphql-core",
  "idna",
  "multidict",
  "numpy",
  "pandas",
  "python-dateutil",
  "pytz",
  "requests",
  "six",
  "tzdata",
  "urllib3",
  "yarl"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/d3b-center/dewrangle-python"
"Bug Tracker" = "https://github.com/d3b-center/dewrangle-python/issues"
